# k8s-dashboard-fork

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: cache.py  config.py  main.py  models.py
backend/app/api/: contexts.py  events.py  logs.py  namespaces.py  resources.py  search.py  visualizer.py  ws.py
backend/app/k8s/: client.py  relationships.py  resources.py  watcher.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/common/: DataTable.tsx  GlobalSearch.tsx  StatusBadge.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/resources/: EventsTable.tsx  ResourceOverview.tsx  YamlViewer.tsx
frontend/src/components/visualizer/: K8sNode.tsx  VisualizerGraph.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useK8sWatch.ts  useKeyboardShortcuts.ts
frontend/src/pages/: Dashboard.tsx  EventsPage.tsx  ResourceDetailPage.tsx  ResourceListPage.tsx  VisualizerPage.tsx
frontend/src/types/: k8s.ts
