[project]
name = "k8s-dashboard-backend"
version = "0.1.0"
description = "Kubernetes Dashboard Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "kubernetes>=31.0.0",
    "pydantic-settings>=2.6.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
